Run restart loop on a virtual thread and clarify give-up logging
The Spring blocking subscription restart loop parks on failureSignal.join()
for the whole time a subscription is being restarted, which can be the
subscription's entire lifetime under a persistent fault. Running that loop on
a cached platform thread pins one platform thread per restarting subscription
for that duration. This repo already runs blocking subscriptions on virtual
threads, so switch the restart executor to a per-task virtual-thread executor.
A parked virtual thread unmounts from its carrier, so no platform thread is
held while the loop waits for the next failure.

Also distinguish an interrupted or shutting-down restart loop from genuine
retry exhaustion. RetryExecution now restores the interrupt status when a
backoff sleep is interrupted, and runRestartLoop logs an interrupted loop or a
model shutdown at warn/debug instead of the misleading "retries exhausted"
error.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>